services/ttrss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttrss
  labels:
    app.kubernetes.io/name: ttrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ttrss
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ttrss
    spec:
      containers:
      - name: "ttrss"
        image: "ttrss:latest"
        imagePullPolicy: "Always"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 15
