services/ttrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttrss
  labels:
    app.kubernetes.io/name: ttrss
spec:
  selector:
    app.kubernetes.io/name: ttrss
  type: ClusterIP
  ports:
  - port: 80
    name: ttrss-web
    protocol: TCP
