services/ttrss/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ttrss
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /rss
        pathType: Prefix
        backend:
          service: {name: ttrss, port: {number: 80}}
